# Pythonista-Bot

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pdm-python  .template.env  Dockerfile  LICENSE  README.md  bot.py  config.ini  config.template.ini  config.template.toml  docker-compose.yml  launcher.py  postgres_password.example.txt  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: build_and_push.yaml  coverage_and_lint.yml  deploy.yml
constants/: __init__.py  _meta.py  constants.py  meta.py
core/: __init__.py  bot.py  checks.py  config.py  context.py  converters.py  core.py  enums.py  errors.py  help.py  paginator.py  riot.py
core/database/: __init__.py  database.py
core/utils/: __init__.py  formatters.py  logging.py  paginator.py
database/: schema.sql
modules/: __init__.py  admin.py  api.py  eval.py  github.py  help.py  info.py  logging.py  manuals.py  moderation.py  starboard.py  stars.py  suggestions.py  tags.py
server/: application.py
snekbox/: docker-compose.yml
types/: config.py
types_/: config.py  papi.py
utils/: converters.py  formatters.py
