[tool.poetry]
name = "pythonista-bot"
version = "0.1.0"
description = "The bot that runs the Pythonista guild!"
authors = [
    "Alex Nørgaard <umbra@abstractumbra.dev>",
    "IAmTomahawkx <iamtomahawkx@gmail.com>",
    "EvieePy <29671945+evieepy@users.noreply.github.com>",
]
license = "MPL2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", rev = "e6a0dc5bc0ba8e739b0def446378088bea65d1df" }
aiohttp = "*"
asyncpg = "*"
toml = "*"
"mystbin.py" = "^6"
jishaku = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
"asyncpg-stubs" = "*"
"typing-extensions" = "*"

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
lines_after_imports = 2
line_length = 125
combine_as_imports = true
combine_star = true


[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
