[tool.poetry]
name = "pythonista-bot"
version = "0.1.0"
description = "The bot that runs the Pythonista guild!"
authors = [
    "Alex Nørgaard <umbra@abstractumbra.dev>",
    "IAmTomahawkx <iamtomahawkx@gmail.com>",
    "EvieePy <29671945+evieepy@users.noreply.github.com>",
]
license = "MPL2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", rev = "e6a0dc5bc0ba8e739b0def446378088bea65d1df" }
aiohttp = "*"
asyncpg = "*"
toml = "*"
"mystbin.py" = "*"
jishaku = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
"asyncpg-stubs" = "*"
"typing-extensions" = "*"

[tool.black]
line-length = 125
preview = true

[tool.ruff]
line-length = 125
target-version = "py311"

[tool.ruff.lint]
exclude = ["docs/extensions/*.py"]
select = [
    "C4",
    "F",
    "G",
    "I",
    "PTH",
    "RUF",
    "SIM",
    "TCH",
    "UP",
    "W",
    "PERF",
    "ANN",
]
ignore = [
    "F401",
    "F402",
    "F403",
    "F405",
    "PERF203",
    "RUF001",
    "RUF009",
    "SIM105",
    "UP034",
    "UP038",
    "ANN101",
    "ANN102",
    "ANN401",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMode = "strict"
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
